--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "babel-loader": "8.0.*",
     "babel-preset-latest": "6.16.0",
     "babel-register": "6.26.*",
-    "chai": "3.5.0",
-    "chalk": "1.1.3",
-    "eslint": "4.18.2",
-    "eslint-plugin-import": "2.12.0",
-    "mocha": "5.2.0",
-    "webpack": "1.13.2"
+    "chai": "4.2.*",
+    "chalk": "2.4.*",
+    "eslint": "6.0.*",
+    "eslint-plugin-import": "2.18.*",
+    "mocha": "6.1.*",
+    "webpack": "4.35.*"
   },
   "dependencies": {}
 }
